added logging middleware, working on auth middleware and a refactoring of the routers into a loadouts router and a weapons router.
